# PlantSimulator

./: .dockerignore  .gitignore  CMakeLists.txt  CargilPlantBreakDown.txt  README.md  docker-compose.yml  itemsToAdd.txt  workflow
app/: main.py
app/core/: __init__.py  logging_config.py
app/data/: plantops.sqlite3  plantops.sqlite3-shm  plantops.sqlite3-wal
app/data/plant_templates/: feed_mill.json
app/services/: auth.py  db_store.py  diagnostics.py  plant_config.py  playback.py  scenario_service.py
app/sim/: __init__.py  engine.py
app/static/css/: 00-core.css  10-dashboard-base.css  (+13 more)
app/templates/: alarms.html  base.html  dashboard.html  diagnostics.html  equipment.html  farmer_display.html  fault_tuning.html  help.html  io_monitor.html  login.html  loto.html  maintenance.html  not_found.html  parts.html  plant_config.html  playback.html  process_flow.html  production.html  reports.html  scenarios.html  training.html  trends.html
archive/old-cpp-qt-version-2026-05-31/: CMakeLists.txt  itemsToAdd.txt  workNotes.txt
doc/: Level-1.tex  Level-3.tex
docs/: OPERATIONS_GUIDE.md  PROJECT_STATUS.md  RELEASE_CHECKLIST.md
scripts/: project_tree.sh  release_check.sh  smoke_check.py
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.hpp
src/sim/: Components.hpp  Loader.cpp  Loader.hpp  SimCore.cpp  SimCore.hpp  Systems.cpp  Systems.hpp
src/ui/: HeatExchangerItem.hpp  PlantItem.cpp  PlantItem.hpp  PlantLayout.cpp  PlantLayout.hpp  PlantModel.cpp  PlantModel.hpp  PlantScene.cpp  PlantScene.hpp  PumpItem.hpp  TankItem.hpp
tests/: test_basic_routes.py
(+9 files in other folders)
